--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.7",
     "@reduxjs/toolkit": "^1.9.5",
@@ -22,7 +23,8 @@
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "router": "^1.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -32,6 +34,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-rewrite-all": "^1.0.1"
   }
 }
